<resources>
    <string name="app_name">智慧农业</string>
    <!--test-->

    <string name="time">2020/5/23</string>
    <string name="housekeeper">管家云</string>
    <string name="monitor">监控云</string>
    <string name="retrospect">追溯云</string>
    <string name="report_form">报表云</string>
    <string name="all_area">显示全部地块</string>
    <string name="warning_area">仅显示有预警的地块</string>
    <string name="task_area">仅显示有任务的地块</string>
    <string name="seven_day">近7日</string>
    <string name="fifteen_day">近15日</string>
    <string name="thirty_day">近30日</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_manage">农资库存管理</string>
    <string name="product_manage">产品库存管理</string>
    <string name="add_product">增加产品</string>
    <string name="revisedinformation">编辑个人资料</string>
    <string name="information">个人资料</string>
    <string name="revise_phone">修改手机号</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="leave_application">请假申请</string>
    <string name="leave_record">请假记录</string>
    <string name="leave_type">请假类型</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="time_length">时长</string>
    <string name="leave_reason">请假理由</string>
    <string name="approval">待审批</string>
    <string name="approved">已审批</string>
    <string name="select_details">查询详情</string>

    <string name="headportrait">头像</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="phone">手机号</string>
    <string name="position">职位</string>
    <string name="adress">联系地址</string>

    <string name="input_old_pwd">请输入旧密码:</string>
    <string name="hintinput_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码:</string>
    <string name="hintinput_new_pwd">请输入新密码</string>
    <string name="input_new_again_pwd">请确认新密码:</string>
    <string name="hintinput_new_again_pwd">请确认新密码</string>


    <string name="input_phone">手机号:</string>
    <string name="input_code">验证码:</string>
    <string name="hintinput_phone">请输入手机号</string>
    <string name="hintinput_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="english_name">" Smart agriculture platform "</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="input_loginname">请输入您的用户名/手机号</string>
    <string name="input_loginpwd">请输入您的密码</string>
    <string name="company">版权@山东科翔软件科有限公司</string>
    <string name="clear_cache">清除缓存</string>
    <string name="sure_clear_cache">确定清除缓存？</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
</resources>
