<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/bg"
        tools:context=".fragment.UpdatePwdFragment">

        <include
            layout="@layout/title_item" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/cycle_white"
            android:paddingStart="@dimen/dp_40"
            android:paddingEnd="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_200"
            android:layout_marginBottom="@dimen/dp_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline66"
            app:layout_constraintStart_toStartOf="@+id/guideline65"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView117"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_old_pwd"
                android:textColor="@color/title_gray"
                android:layout_marginTop="@dimen/dp_60"
                android:textSize="@dimen/sp_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:background="@drawable/cycle_gray_line"
                android:hint="@string/hintinput_old_pwd"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:textCursorDrawable="@drawable/textcursor"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toBottomOf="@+id/textView117"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView117"
                app:layout_constraintTop_toTopOf="@+id/textView117" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_60"
                android:text="@string/input_new_pwd"
                android:textColor="@color/title_gray"
                android:textSize="@dimen/sp_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView117" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:background="@drawable/cycle_gray_line"
               
                android:hint="@string/hintinput_new_pwd"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:textCursorDrawable="@drawable/textcursor"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toBottomOf="@+id/textView118"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView118"
                app:layout_constraintTop_toTopOf="@+id/textView118" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_60"
                android:text="@string/input_new_again_pwd"
                android:textColor="@color/title_gray"
                android:textSize="@dimen/sp_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView118" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:background="@drawable/cycle_gray_line"
               
                android:hint="@string/hintinput_new_again_pwd"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:textCursorDrawable="@drawable/textcursor"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toBottomOf="@+id/textView119"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView119"
                app:layout_constraintTop_toTopOf="@+id/textView119" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_100"
                android:layout_marginTop="@dimen/dp_95"
                android:background="@drawable/cycle_orange"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView119" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>