<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".fragment.PhoneFragment">

        <include layout="@layout/title_item" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0mm"
            android:layout_height="0mm"
            android:layout_marginTop="@dimen/mm_150"
            android:layout_marginBottom="@dimen/mm_100"
            android:background="@drawable/cycle_white"
            android:paddingStart="@dimen/mm_40"
            android:paddingEnd="@dimen/mm_40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline66"
            app:layout_constraintStart_toStartOf="@+id/guideline65"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView117"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mm_60"
                android:text="@string/input_phone"
                android:textColor="@color/title_color"
                android:textSize="@dimen/mm_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0mm"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mm_40"
                android:background="@drawable/cycle_gray_line"
                android:ems="10"
                android:hint="@string/hintinput_phone"
                android:inputType="textPassword"
                android:padding="@dimen/mm_10"
                android:textCursorDrawable="@drawable/textcursor"
                android:textSize="@dimen/mm_28"
                app:layout_constraintBottom_toBottomOf="@+id/textView117"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView117"
                app:layout_constraintTop_toTopOf="@+id/textView117" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mm_60"
                android:text="@string/input_code"
                android:textColor="@color/title_color"
                android:textSize="@dimen/mm_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView117" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0mm"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mm_40"
                android:background="@drawable/cycle_gray_line"
                app:layout_constraintBottom_toBottomOf="@+id/textView118"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView118"
                app:layout_constraintTop_toTopOf="@+id/textView118">

                <View
                    android:id="@+id/divider33"
                    android:layout_width="@dimen/mm_2"
                    android:layout_height="0mm"
                    android:background="@color/line_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0mm"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/hintinput_code"
                    android:inputType="textPassword"
                    android:padding="@dimen/mm_10"
                    android:textCursorDrawable="@drawable/textcursor"
                    android:textSize="@dimen/mm_28"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/divider33"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/textView121"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_code"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/mm_28"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/divider33"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView120"
                android:layout_width="0mm"
                android:layout_height="@dimen/mm_100"
                android:layout_marginTop="@dimen/mm_95"
                android:background="@drawable/cycle_orange"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="@dimen/mm_35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView118" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>